--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node build/index.js",
     "tsc": "tsc",
@@ -16,6 +17,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "4.18.2",
+    "pg": "^8.11.3",
+    "pg-promise": "^11.5.4"
   }
 }
