--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "os-grocery-comparing-app-back",
   "version": "1.0.0",
-  "description": "",
+  "description": "# Backend developed with Node, Express and Typescript.",
   "main": "index.js",
   "scripts": {
     "start": "node build/index.js",
@@ -16,6 +16,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "express": "^4.18.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "os-grocery-comparing-app-back"
   }
 }
