--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/node": "^20.10.3",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "pg-promise": "^11.5.4"
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2"
   },
   "repository": {
     "type": "git",
