--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.20",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.10.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
@@ -21,6 +26,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
